--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "gspread>=6.2.1",
+    "oauth2client>=4.1.3",
     "streamlit>=1.50.0",
 ]
